# iterx

./: README.md  bar.hs  iterX.cabal
benchmarks/: Bench.hs
src/: Foo.hs  IterX.hs
src/IterX/: Attoparsec.hs  Core.hs  Exception.hs  Fusion.hs  Generators.hs  IterX.hs  Parser.hs  ReadableChunk.hs  Stream.hs  StreamTrans.hs  Unsafe.hs
src/IterX/Fusion/: Fold.hs  Hylo.hs  IO.hs  Stream.hs  Transforms.hs  Transforms2.hs  Unfold.hs
src/IterX/Parser/: Binary.hs
