name:                iterX
version:             0.1.0.0
synopsis:            generators and parsers
-- description:         
license:             BSD3
license-file:        LICENSE
author:              John W. Lato
maintainer:          jwlato@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     IterX,
                       IterX.Attoparsec,
                       IterX.Generators,
                       IterX.Core,
                       IterX.Exception,
                       IterX.Fusion.Fold,
                       IterX.Fusion.Transforms,
                       IterX.Fusion.Transforms2,
                       IterX.Fusion.Unfold,
                       IterX.Fusion,
                       IterX.IterX,
                       IterX.Parser,
                       IterX.Parser.Binary,
                       IterX.ReadableChunk,
                       IterX.Unsafe
  -- other-modules:       
  build-depends:       base >=4.6 && <4.8,
                       attoparsec >=0.10 && <0.12,
                       bytestring >=0.10 && <0.11,
                       exceptions >=0.3  && <0.4,
                       mtl >=2.1 && <2.2,
                       mono-traversable >= 0.1 && < 0.3,
                       profunctors >= 3 && < 5,
                       vector >= 0.10 && < 0.12,
                       word24 >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark bench.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Bench.hs

  build-depends:
      base,
      iterX,
      iteratee   >= 0.8.4.2 && < 0.10,
      mtl,
      profunctors,
      vector,
      transformers-base >= 0.4,
      listlike-instances,
      criterion  >= 0.6 && < 0.9
  ghc-options: -O2 -dsuppress-coercions

source-repository head
  type:                git
  location:            git://github.com/JohnLato/iterx.git
